tests/__snapshots__/api-toBeAny.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeAny: stderr 1`] = `
"Error: Type 'any' is not identical to type 'string'.

   8 |   expect(returnsAny()).type.toBeAny();
   9 | 
> 10 |   expect(returnsString()).type.toBeAny();
     |                                ^
  11 | });
  12 | 
  13 | test("is NOT any?", () => {

       at ./__typetests__/toBeAny.tst.ts:10:32 ❭ is any?

Error: Type 'any' is identical to type 'any'.

  14 |   expect(returnsString()).type.not.toBeAny();
  15 | 
> 16 |   expect(returnsAny()).type.not.toBeAny();
     |                                 ^
  17 | });
  18 | 

       at ./__typetests__/toBeAny.tst.ts:16:33 ❭ is NOT any?

"
`;

exports[`toBeAny: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeAny.tst.ts
  × is any?
  × is NOT any?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
